testsuite/tests/properties/invalid_unique/test.out
== not_array/test.lkt ==
test.lkt:4:39: error: Array expected but got Example instead
4 |     @exported fun test(): Bool = node.unique()
  |                                       ^^^^^^


== not_hashable/test.lkt ==
test.lkt:4:63: error: Element type (here Token) must be hashable
4 |     @exported fun test(): Bool = node.token_start.singleton().unique()
  |                                                               ^^^^^^


lkt_compile: Done
